--- a/京东2022年3月裁员实况.md
+++ b/京东2022年3月裁员实况.md
@@ -48,7 +48,7 @@
 | 京东零售 | 生活服务群      | 汽车产品研发群    |   20%左右       |                |                                                              |
 | 京东零售 | 平台生态 | 商品运营中心 | 20%-30% | 无 | 1-原苏州街老人在岗十多年，35岁以上占多数 |
 | 京东零售 | 全渠道 | 研发部 | 20%-30% | | 1-先长期pua施压让自离，施压无果大礼包 |
-| | | | | | |
+|京东零售 |技术与数据中心 |商羚业务部 |50%以上 |有 |C-2部门ld亲自拟定名单，交c-3部门ld去聊，全凭自己喜好，和绩效无关，无C也被裁，新老员工都有 |
 | | | | | | |
 | | | | | | |
 
